# generate-diary-template

./: Cargo.toml  README.md  copy_wsl.sh
src/: lib.rs  main.rs
