[package]
name = "generate-diary-template"
version = "0.1.0"
authors = ["toof-jp <toof.jp.mail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.11", features = ["local-offset", "formatting", "parsing"] }
