[package]
name = "diary-template-generator"
version = "0.1.0"
authors = ["toof <toof@toof.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
time = { version = "0.3.25", features = ["local-offset", "formatting", "parsing", "macros"] }
